--- a/index.html
+++ b/index.html
@@ -60,6 +60,43 @@
       .animate-shake {
         animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
       }
+
+      /* Action VFX */
+      @keyframes slash-action {
+        0% { transform: scale(0.5) rotate(-45deg) translate(-20px, -20px); opacity: 0; }
+        20% { opacity: 1; transform: scale(1) rotate(0deg) translate(0, 0); }
+        100% { transform: scale(1.5) rotate(45deg) translate(20px, 20px); opacity: 0; }
+      }
+      .animate-slash {
+        animation: slash-action 0.6s ease-out forwards;
+      }
+
+      @keyframes aura-pulse {
+        0% { box-shadow: 0 0 0 0 rgba(185, 28, 28, 0.4); transform: scale(1); }
+        50% { box-shadow: 0 0 20px 10px rgba(185, 28, 28, 0.2); transform: scale(1.02); }
+        100% { box-shadow: 0 0 0 0 rgba(185, 28, 28, 0); transform: scale(1); }
+      }
+      .animate-aura {
+        animation: aura-pulse 1.5s infinite;
+      }
+
+      @keyframes shield-fade {
+        0% { opacity: 0; transform: scale(0.8); }
+        20% { opacity: 0.8; transform: scale(1.1); }
+        100% { opacity: 0; transform: scale(1); }
+      }
+      .animate-shield {
+        animation: shield-fade 1s ease-in-out forwards;
+      }
+
+      @keyframes heal-rise {
+        0% { opacity: 0; transform: translateY(10px) scale(0.5); }
+        30% { opacity: 1; transform: translateY(0) scale(1); }
+        100% { opacity: 0; transform: translateY(-30px) scale(1.2); }
+      }
+      .animate-heal {
+        animation: heal-rise 1.5s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
